homeserver/paperless-ngx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
      - name: paperless-ngx
        image: ghcr.io/paperless-ngx/paperless-ngx:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: data
          mountPath: /usr/src/paperless/data
        - name: media
          mountPath: /usr/src/paperless/media
        - name: consume
          mountPath: /usr/src/paperless/consume
        - name: export
          mountPath: /usr/src/paperless/export
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-data-pvc
      - name: media
        persistentVolumeClaim:
          claimName: paperless-media-pvc
      - name: consume
        persistentVolumeClaim:
          claimName: paperless-consume-pvc
      - name: export
        persistentVolumeClaim:
          claimName: paperless-export-pvc
