homeserver/paperless-ngx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
